---
source: cli/tests/snapshot/main.rs
expression: err
---
std.trace: too few arguments
error: not enough arguments
  ┌─ [INPUTS_PATH]/errors/trace_not_saturated.ncl:3:1
  │
3 │ %trace% "too few arguments"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^ trace expects 2 arguments, but not enough were provided


